get no cnt display 0

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         if (cntInfo) {
           cnt = cntInfo.count;
         } else {
-          cnt = '-'
+          cnt = 0;
         }
         displayCnt(cnt);
       })
