--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   </div>
 
   <script defer>
-    const HOSTNAME = 'localhost';
+    // const HOTNAME = 'localhost';
+    // const PORT = 8080
+    const HOSTNAME = '192.168.178.63';
     const PORT = 3000;
     let cnt = 0;
 
